# via-msgs

./: CMakeLists.txt  README.md  package.xml
include/via_definitions/: msg_defs.hpp
include/via_definitions/geometry/: box2d.hpp  detection2d.hpp  point2d.hpp
include/via_definitions/perception/: lane_line.hpp  object.hpp  traffic_sign.hpp
include/via_msgs/: msg_defs.hpp
msg/: Box2d.idl  Lane.idl  LaneLine.idl  Point2f.idl  TrafficSign.idl  TrafficSigns.idl  TwoInts.idl
