<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>via_definitions</name>
  <version>0.0.1</version>
  <description>Communication interfaces in VIA Stack: messages, services, actions.</description>
  
  <maintainer email="makerhanoi@gmail.com">MakerHanoi</maintainer>
  <maintainer email="air.team.2050@gmail.com">AIR</maintainer>
  <author email="vietanh.dev@gmail.com">Viet Anh Nguyen</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
